2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* clock/Makefile.am: Reflect having moved automake/.
	* console/Makefile.am: Reflect having moved automake/.
	* include/Makefile.am: Reflect having moved automake/.
	* start/Makefile.am: Reflect having moved automake/.
	* startup/Makefile.am: Reflect having moved automake/.
	* timer/Makefile.am: Reflect having moved automake/.
	* wrapup/Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 452/bsps
	* startup/Makefile.am: Remove USE_INIT_FINI.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-08-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 445/bsps
	* bsp_specs: Remove -D__embedded__ -Asystem(embedded) from cpp.
	Remove cpp, old_cpp (now unused).

2003-06-22	Chris Johns <cjohns@cybertec.com.au>

	PR 264/bsps
	PR 414/bsps
	* start/reset.S, startup/cpuboot.c, startup/linkcmds:
	PR264 - Stopped the core dump by removing the bad instruction.
	PR414 - Fixed the global interupt vector register.
        Linker command file to have the boot code in the first 8K.
        The chip select remap needed to be volatile.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-20	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds*: Add FreeBSD sysctl() sections.

2002-12-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* console/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* start/Makefile.am: Don't include @RTEMS_BSP@.cfg.